# forshare-polygonid-flutter-sdk

./: .gitignore  pubspec.yaml
android/: build.gradle  sdk.properties
example/: .env  pubspec.yaml
example/ios/: Podfile
example/lib/: main.dart
ios/: polygonid_flutter_sdk.podspec  polygonid_flutter_sdk.podspec.bak
ios/Classes/: libpolygonid.h
lib/common/: http.dart
lib/sdk/: credential.dart  iden3comm.dart  identity.dart  polygon_id_sdk.dart  polygonid_flutter_channel.dart  (+1 more)
polygonid-flutter-wrapper/: pubspec.yaml
rust/: Cargo.toml  Cargo.toml.bak  makefile
rust/myCC/myCC-x86_64/myCC_x86_64.xcodeproj/: project.pbxproj
rust/myCC/myCC/myCC.xcodeproj/xcshareddata/xcschemes/: myCC.xcscheme
rust/myCC/myCC/myClang/: main.swift
rust/src/: build.sh  lib.rs  lib.rs.bak
rust/xcframework/: build_and_replace.sh  build_and_replace.sh.bak  run.sh
rust/xcframework/Frameworks/babyjubjub_with_exception_handing.xcframework/: Info.plist
rust/xcframework/Frameworks/babyjubjub_with_exception_handing.xcframework/Headers/: babyjubjub_with_exception_handing.h
rust/xcframework/babyjubjub_with_exception_handing/: README.md
rust/xcframework/babyjubjub_with_exception_handing/babyjubjub_with_exception_handing/: babyjubjub_with_exception_handing.h  babyjubjub_with_exception_handing.mm
rust/xcframework/babyjubjub_with_exception_handing/babyjubjub_with_exception_handing.xcodeproj/: project.pbxproj
rust/xcframework/babyjubjub_with_exception_handing/babyjubjub_with_exception_handing.xcodeproj/xcshareddata/xcschemes/: babyjubjub_with_exception_handing.xcscheme
(+90 files in other folders)
