#https://gist.github.com/surpher/bbf88e191e9d1f01ab2e2bbb85f9b528
#rm -rf target;CC=/Users/yushihang/Library/Developer/Xcode/DerivedData/myClang-bgbvbtfirelimyeoxcmvtvnahuys/Build/Products/Debug/myCC cargo +nightly build -Z build-std --target aarch64-apple-ios-sim --release -vvvv > cargo.log 2>&1

[package]
name = "babyjubjub-rs"
version = "0.0.7"
authors = ["arnaucube <root@arnaucube.com>"]
edition = "2018"
license = "GPL-3.0"
description = "BabyJubJub elliptic curve implementation"
repository = "https://github.com/arnaucube/babyjubjub-rs"
readme = "README.md"

[lib]
name = "babyjubjub"
crate-type = ["lib", "staticlib"]

#["lib","staticlib", "cdylib"]

[dependencies]
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
rand = "0.4"
rand6 = {package="rand", version="0.6.5"}
num = "0.2.0"
num-bigint = {version = "0.2.2", features = ["rand"]}
num-traits = "0.2.8"
blake = "2.0.1"
generic-array = "0.13.2"
tiny-keccak = "1.5"
rustc-hex = "1.0.0"
poseidon-rs = "0.0.8"
arrayref = "0.3.5"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_babyjubjub"
harness = false

[build]
build-stage = 1
target = ["aarch64-apple-ios-sim"]

[profile.release]
debug = false
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
strip = true        # Automatically strip symbols from the binary.